--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     working_directory: ~/code
 
     docker:
-      - image: circleci/android:api-27-node8-alpha
+      - image: circleci/android:api-27-alpha
 
     environment:
       JVM_OPTS: -Xmx3200m
@@ -33,5 +33,3 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-
-
